# vibecheck

./: .env.example  .gitignore  README.md  pyproject.toml
src/: app.py  crew.py
src/config/: agents.yaml  tasks.yaml
